Fixes Fixed Section List Header, Section panel collapse/expand, Image Height Width, Padding in section and columns

--- a/NewsletterBuilder/WebContent/css/style.css
+++ b/NewsletterBuilder/WebContent/css/style.css
@@ -43,8 +43,7 @@ body { overflow: auto; background-color: white; position: absolute; width: 100%;
 
 .left_content { 
 	width: 25%; position: absolute; left: 0; top: 0;
-	height: 100%; overflow: auto;  
-	border-right: 1px solid #E2E2E2;
+	height: 100%; border-right: 1px solid #E2E2E2;
 }
 .right_content { 
 	width: calc(75% - 1px); position: absolute; left: 25%; top: 0;
@@ -52,8 +51,10 @@ body { overflow: auto; background-color: white; position: absolute; width: 100%;
 }
 
 .page { display: none; float: left; width: 100%; }
+#page1 { position: relative; height: 100%; }
 .active_page { display: block; }
 .page_header { width: 100%; float: left; height: 50px; margin: 0; background-color: #66a5ff; color: white; padding-top:8px; }
+#page1 .page_header { position: absolute; top: 0; left: 0; }
 .page_header_text { font-size: 18px; text-align: center; margin-top:5px;}
 .page_header_btn { border: none; background: none; box-shadow: none; background-color: transparent; font-size: 20px; padding: 0; margin-top: 3px; }
 .page_header_btn:hover, .page_header_btn:focus { outline: none; background: transparent; }
@@ -61,15 +62,18 @@ body { overflow: auto; background-color: white; position: absolute; width: 100%;
 /***********************************/
 /**** style for left content ****/
 /***********************************/
-.section_panel_group { float: left; width: 100%; }
+.section_expand_collapse { font-size: 20px; color: white; cursor: pointer; }
+.section_collapse:before { content: "\f066"; font-family: FontAwesome; }
+.section_expand:before { content: "\f065"; font-family: FontAwesome; }
+.section_panel_group { position: absolute; top: 50px; left: 0; bottom: 0; width: 100%; overflow: auto; margin-bottom: 10px; }
 .section_panel_header { color: white; background-image: none !important; border-radius: 0; background-color: #636363 !important; }
 .section_panel_header a { font-size: 16px; color: white; }
 .section_panel_header a:hover, .section_panel_header a:focus { text-decoration: none; color: white; }
 .section_panel_header a:before { 
-	font-family:'FontAwesome'; content:"\f078"; 
+	font-family:'Glyphicons Halflings'; content:"\e114"; 
 	float: left; margin-right: 10px; font-size: 16px;
 }
-.section_panel_header a.collapsed:before { content:"\f054"; }
+.section_panel_header a.collapsed:before { content:"\e080"; }
 .section_panel_header span { float: right; color: white; font-size: 18px; cursor: pointer; margin-left: 15px; }
 
 .section_panel { border-radius: 0 !important; box-shadow: none; border: none; margin: 0 !important; }
